--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "robmorgan/phinx": "^0.16.6",
     "symfony/yaml": "^7.2",
     "illuminate/pagination": "^11.36",
-    "firebase/php-jwt": "^6.10"
+    "firebase/php-jwt": "^6.10",
+    "phpmailer/phpmailer": "^6.9"
   }
 }
