--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "symfony/yaml": "^7.2",
     "illuminate/pagination": "^11.36",
     "firebase/php-jwt": "^6.10",
-    "phpmailer/phpmailer": "^6.9"
+    "phpmailer/phpmailer": "^6.9",
+    "illuminate/events": "^11.36"
   }
 }
