--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,28 @@
 APP_ENV=development
 
-APP_NAME=AuthProvider
+APP_NAME=IDPProvider
 APP_VERSION=1.0.0
 
+FRONT_URL=http://localhost:3000
+FRONT_RESET_PATH=auth/reset/password
+FRONT_INVITE_PATH=invite/accept
+
 DB_HOST=127.0.0.1
-DB_NAME=auth_db
+DB_NAME=idp_db
 DB_USER=root
-DB_PASS=
+DB_PASS=password
+
+API_GUARD=true
+JWT_SECRET="JWT-Secret-Key"
+
+SEND_STATUS=false
+SMTP_HOST=SMTP_HOST
+SMTP_PORT=465
+SMTP_USERNAME=SMTP_USERNAME
+SMTP_PASSWORD=SMTP_PASSWORD
+SMTP_ENCRYPTION=ssl
+EMAIL_FROM=EMAIL_FROM
+EMAIL_FROM_NAME=EMAIL_FROM_NAME
+
+EMAIL_COMPANY_LOGO=EMAIL_COMPANY_LOGO
+EMAIL_BASE_COLOR="#ab8c72"
