--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
 APP_ENV=development
 
-APP_NAME=IDPProvider
+APP_NAME="IDP Services"
 APP_VERSION=1.0.0
 
-FRONT_URL=http://localhost:3000
+FRONT_URL=http://localhost:4000
 FRONT_RESET_PATH=auth/reset/password
 FRONT_INVITE_PATH=invite/accept
 
 DB_HOST=127.0.0.1
 DB_NAME=idp_db
 DB_USER=root
-DB_PASS=password
+DB_PASS=
 
-API_GUARD=true
+CONNECTION_ROUTE=true
+CONNECTION_KEY="Connection-key"
 JWT_SECRET="JWT-Secret-Key"
 
 SEND_STATUS=false
@@ -24,5 +25,6 @@ SMTP_ENCRYPTION=ssl
 EMAIL_FROM=EMAIL_FROM
 EMAIL_FROM_NAME=EMAIL_FROM_NAME
 
+EMAIL_COMPANY_NAME="EMAIL_COMPANY_NAME"
 EMAIL_COMPANY_LOGO=EMAIL_COMPANY_LOGO
 EMAIL_BASE_COLOR="#ab8c72"
